# snapshot 0.6.2

06 Sep 2003 mipsator
 * more stuff to permit node command (i will explain later).
 * modified parse_cell() and prscell_init() to meet our current goal.
 * added more stuff again for node command.
 * finished node command stuff.
 * enabled SETTINGS command.
 * converted DEFINE command as node.
 * defined values can contain variable.
 * added some support for global language.
 * updated pmkfile.sample and pmkscan.dat to new format.
 * removed redundant code in pmk_target() and pmk_ac_acompat().
 * updated pmkfile man page.

05 Sep 2003 mipsator
 * improved parser engine again (first part).
 * new pmk language style (no longer need leading dot) but keep
	compat with 0.6 release.
 * adapted pmk to new engine.
 * adapted pmkscan to new engine.
 * added stuff to parse variables in strings (deactived).
 * misc related stuff.
 * fixed and enabled variable parsing in pmk_define().

# snapshot 0.6.1

02 Sep 2003 mipsator
 * added byte_order_check() in pmksetup to set HW_BYTEORDER.

01 Sep 2003 mipsator
 * added invert_bool() and get_comp_path() in functool.
 * improved language checking and compiler path setting in func.
 * small improvement of pmk_target().
 * cleaned po_get_data() use in func.

30 Aug 2003 mipsator
 * added VARNAME in CHECK_BINARY to specify alternate storage variable.
 * fixed deinstall target in Makefile.

28 Aug 2003 mipsator
 * added missing checks.
 * style.

23 Aug 2003 mipsator
 * added switches support.
 * update man pages about switches.

# PMK 0.6 released

23 Aug 2003 mipsator
 * changes for 0.6 release.

# snapshot 0.5.6

22 Aug 2003 mipsator
 * misc fixes

# snapshot 0.5.5

21 Aug 2003 mipsator
 * changed type of DEPEND, it must be a list now.
 * LIST in TARGET command is now of the list type.
 * allow use of lists in pmkscan data file.
 * added code to set the language of a check in pmkscan.
 * updated pmkfile.5 man page.
 * added arguments to pmkscan (-v -h and optional path).
 * added pmkscan.1 man page.
