@@ -109,11 +109,12 @@ void	 prsnode_destroy(prsnode *);
 prscell	*prscell_init(int, int, int);
 void	 prscell_destroy(prscell *);
 htable	*keyword_hash(prskw [], int);
+char	*skip_blank(char *pstr);
+char	*parse_identifier(char *, char *, size_t);
 char	*parse_quoted(char *, pmkobj *, size_t);
 char	*parse_list(char *, pmkobj *, size_t);
-char	*parse_word(char *, pmkobj *, size_t);
-char	*parse_identifier(char *, char *, size_t);
-char	*skip_blank(char *pstr);
+char	*parse_key(char *, pmkobj *, size_t);
+char	*parse_data(char *, pmkobj *, size_t);
 prscell	*parse_cell(char *, htable *);
 bool	 parse_pmkfile(FILE *, prsdata *, prskw [], size_t);
 bool	 parse_opt(char *, prsopt *);
