@@ -13,7 +13,7 @@ SETTINGS {
 
 # put some defines
 DEFINE {
-PACKAGE=scandisk
+PACKAGE="scandisk"
 VERSION="0.0.1b"
 FULL_NAME="$PACKAGE-$VERSION"
 }
@@ -27,16 +27,16 @@ use_gtk=FALSE
 # check availability of termcap library
 CHECK_LIB(lib_termcap) {
 REQUIRED=FALSE
-LIBNAME=termcap
+LIBNAME="termcap"
 }
 
 # check function getwin in libcurses
 # this check depends of lib_termcap check for test purposes
 CHECK_LIB(lib_curses) {
 REQUIRED=FALSE
-DEPEND=(use_curses,lib_termcap)
-LIBNAME=curses
-FUNCTION=getwin
+DEPEND=("use_curses","lib_termcap")
+LIBNAME="curses"
+FUNCTION="getwin"
 }
 
 # check availability of sys/param.h header
@@ -50,13 +50,13 @@ LANG="C++"
 CHECK_INCLUDE(string_strcpy) {
 REQUIRED=FALSE
 INCLUDE="string.h"
-FUNCTION=strlcpy
+FUNCTION="strlcpy"
 }
 
 # try to found gtk-config in path
 CHECK_BINARY(gtk_config) {
 REQUIRED=FALSE
-DEPEND=(use_gtk)
+DEPEND=("use_gtk")
 FILENAME="gtk-config"
 }
 
@@ -70,7 +70,7 @@ VERSION="1.2"
 # get data for gtk+ via pkg-config
 CHECK_PKG_CONFIG(gtk_data) {
 REQUIRED=FALSE
-DEPEND=(use_gtk)
+DEPEND=("use_gtk")
 PACKAGE="gtk+"
 VERSION="1.2"
 CFLAGS=GTK_CFLAGS
@@ -80,12 +80,12 @@ LIBS=GTK_LIBS
 # check _Bool type
 CHECK_TYPE(type_bool_posix) {
 REQUIRED=FALSE
-TYPE=_Bool
+TYPE="_Bool"
 }
 
 # check c++ bool type
 CHECK_TYPE(type_bool_cxx) {
 REQUIRED=FALSE
-TYPE=bool
+TYPE="bool"
 LANG="C++"
 }
